# f-pcmc

./: .gitignore  .gitmodules  CLAUDE.md  pyproject.toml  pytest.ini  roots.env.example  run_matrix.py
.claude/skills/grill-me/: SKILL.md
baselines/: __init__.py  batch_knn_vmf.py  oracle.py  v1_stream.py
baselines/pcmc_sleep/: HANDOFF_PHASE2.md  PLAN.md  stream_mirror.py
baselines/v1/: config.py  config.yaml  data_loader.py  evaluation.py  ind_model.py  main.py
baselines/v1/paradigms/: __init__.py  base.py  factory.py  knn_dpmeans.py  knn_vmf.py  mahalanobis_hdbscan.py
configs/: a1_global_tau.yaml  a2_no_stm.yaml  a3_no_recurrence.yaml  a4_no_merge.yaml  a5_knn_ref.yaml  a5_vmf.yaml  a6_resnet50.yaml  b1_v1.yaml  b2_batch.yaml  b3_oracle.yaml  default.yaml  fpcmc_default.yaml  golden_run.yaml  p2_class_split.yaml
data/: README.md
docs/: ASSETS.md  CHANGES.md  PRD_frozen_encoder_pcmc.md  TASKS_frozen_encoder_pcmc.md
eval/: __init__.py  figures.py  gt.py  harness.py  metrics.py  workbook.py
fpcmc/: __init__.py  concepts.py  config.py  data.py  init.py  memory.py  protocols.py  replay.py  residual.py  rng.py  scorers.py  stream.py  thresholds.py
lib/: PROVENANCE.md
lib/evaluation/continual/: clustering.py  stream.py
lib/evaluation/continual/paradigms/: vmf_dpmm.py
lib/evaluation/h1/: reference_stats.py  scorers.py
lib/evaluation/h2/: evaluation.py
research_papers/: 2021_Unsupervised_Progressive_Learning_and_the_STAM_Architecture.md  2024_Patch_Based_Contrastive_Learning_and_Memory_Consolidation_for_online_unsupervised_continual_learning.md
tests/: reference_numbers.yaml  test_ablations.py  test_baselines.py  test_concepts.py  test_config.py  test_data.py  test_eval.py  test_fixture.py  test_golden_stream.py  test_init.py  test_invariants.py  test_layout.py  test_matrix.py  test_merge.py  test_pcmc_sleep.py  test_promotion.py  test_protocols.py  test_residual.py  test_rng.py  test_scorers.py  test_stm.py  test_store.py  test_stream.py  test_thresholds.py
tests/fixtures/: golden_stream.npz  golden_stream.py  vmf_world.py
