[project]
name = "fpcmc"
version = "0.1.0"
description = "F-PCMC: frozen-encoder online unsupervised continual learning (PCMC minus sleep)"
requires-python = ">=3.12"
# Runtime pins match the source project's uv.lock exactly (docs/ASSETS.md §4).
# Do not upgrade: the T6 M1 gate compares AUROC to ±0.01 and UMAP/HDBSCAN
# behavior has drifted across minor versions historically.
# NOTE (deviation from TASKS.md T0 dep list, approved 2026-07-10): the
# standalone `hdbscan` package is deliberately omitted — the ported code uses
# sklearn.cluster.HDBSCAN (ASSETS §4), and depending on the third-party
# package risks importing a subtly different implementation.
dependencies = [
    "numpy==2.4.3",
    "scipy==1.17.1",
    "scikit-learn==1.8.0",
    "umap-learn==0.5.11",
    "pyyaml==6.0.2",
    # torch is used ONLY to torch.load the precomputed .pt embedding files
    # (T1 data layer). 2.11.0 matches the source venv that produced
    # tests/reference_numbers.yaml (2.11.0+cu126); served from the CPU-only
    # wheel index (see [tool.uv.sources]) — this is a CPU-only project
    # (PRD §2.2) and torch.load is build-independent.
    "torch==2.11.0",
]

[dependency-groups]
dev = [
    "pytest==8.4.1",
    "pytest-mock==3.14.1",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fpcmc"]
